# flora

./: .gitignore  Application.hs  Foundation.hs  Model.hs  README.md  circle.yml  flora.cabal  karma.conf.js  package.json  stack.yaml  test.webpack.js  webpack.config.js
Handler/: Free.hs  Home.hs
Helpers/: Tokens.hs
Model/: FreeSession.hs  Project.hs  User.hs
Queries/: FreeSession.hs
app/: devel.hs
config/: keter.yml  routes  settings.yml  test-settings.yml
js/: index.js
js/components/: navigation.js  navigaton.test.js
js/utils/: dataset.js  dataset.test.js
messages/: en.msg  pt-BR.msg
migrations/: V1__create_user_table.sql  V2__create_free_session_table.sql  V3__create_project_table.sql
scss/: app.scss  base.scss  buttons.scss  landing.scss  main.scss  menu.scss
static/css/: style.css
static/js/: Index.js  bundle.js
templates/: 404.hamlet  default-layout-wrapper.hamlet  homepage.hamlet
test/: TestImport.hs
test/Handler/: FreeSpec.hs  HomeSpec.hs
test/Helpers/: TokensSpec.hs
